tests/baselines/reference/computedPropertyNames19_ES6.errors.txt
computedPropertyNames19_ES6.ts(3,10): error TS2331: 'this' cannot be referenced in a module or namespace body.
computedPropertyNames19_ES6.ts(3,10): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== computedPropertyNames19_ES6.ts (2 errors) ====
    namespace M {
        var obj = {
            [this.bar]: 0
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
             ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
    }